# PolyConvert-Desktop

./: README.md  docx_to_txt_gui.py  log.txt  pyproject.toml  test_out.txt
scripts/: build_exe.py
src/ufc/: app.py  cli.py
src/ufc/core/: engine.py  errors.py  models.py
src/ufc/i18n/: i18n.py
src/ufc/locales/: en-US.json  zh-TW.json
src/ufc/plugins/: __init__.py  registry.py
src/ufc/plugins/readers/: docx_reader.py  pdf_reader.py
src/ufc/plugins/writers/: txt_writer.py
src/ufc/ui/: main_window.py
src/ufc/utils/: paths.py
tests/: conftest.py
tests/e2e/: test_cli_convert.py  test_pdf_e2e.py
tests/unit/: test_docx_reader.py  test_engine.py  test_pdf_reader.py  test_txt_writer.py
