[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-file-converter"
version = "0.1.0"
description = "Universal File Converter Desktop App"
authors = [{name = "Antigravity", email = "author@example.com"}]
dependencies = [
    "python-docx",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
build = [
    "pyinstaller"
]

[project.scripts]
ufc = "ufc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
